# ChangeLog for catalyst
# Copyright 1999-2011 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  25 Jun 2011; Matt Turner <mattst88@gentoo.org>
  modules/catalyst/arch/mips.py: remove n32/n64 USE flags

  25 Jun 2011; Matt Turner <mattst88@gentoo.org>
  modules/catalyst/arch/mips.py: create generic mips64 classes
  and inherit from them to simplify other classes

  25 Jun 2011; Matt Turner <mattst88@gentoo.org>
  modules/catalyst/arch/mips.py: fix CFLAGS in loongson class

  25 Jun 2011; Matt Turner <mattst88@gentoo.org>
  modules/catalyst/arch/mips.py: Remove ip* classes

  25 Jun 2011; Matt Turner <mattst88@gentoo.org>
  modules/catalyst/arch/mips.py: Remove mips2 classes
  Linux doesn't even run on mips2

  14 Apr 2011; Raúl Porcel <armin76@gentoo.org>
  targets/support/bootloader-setup.sh:
  Add gentoo-ilo option for the bootloader on ia64

  10 Apr 2011; Raúl Porcel <armin76@gentoo.org>
  targets/support/chroot-functions.sh:
  Replace virtual/portage with sys-apps/portage, bug #358847

  05 Feb 2011; Raúl Porcel <armin76@gentoo.org>
  modules/catalyst/arch/amd64.py:
  Enable new amd64 subarches

  01 Nov 2010; Raúl Porcel <armin76@gentoo.org>
  modules/catalyst/arch/mips.py:
  Add patch for Loongson support, patch by Zhang Le <r0bertz at gentoo dot
  org>, bug #330241

  26 Sep 2010; Raúl Porcel <armin76@gentoo.org>
  modules/catalyst/arch/arm.py:
  ARM fixes

  11 Sep 2010; Raúl Porcel <armin76@gentoo.org>
  targets/support/chroot-functions.sh:
  Apply patch to make stage2 quiet, thanks to Alexandre Nuno Milheiro
  <nunomilheiro@gmail.com>, gentoo bug #273664

  11 Sep 2010; Raúl Porcel <armin76@gentoo.org>
  targets/netboot/netboot-final.sh:
  Fix sparc bug, gentoo bug 297231

  04 Sep 2010; Raúl Porcel <armin76@gentoo.org>
  modules/catalyst/arch/arm.py:
  Fix typo and add armv7a-hardfp target

  04 Sep 2010; Raúl Porcel <armin76@gentoo.org>